changed agents parameters

--- a/ideas.json
+++ b/ideas.json
@@ -14,5 +14,25 @@
     {
         "idea": "a smart bottle of water that connects with your phone and gives you important indos",
         "timestamp": "2025-06-29T12:00:50.728551"
+    },
+    {
+        "idea": "a wall art that track tempertarue and humidity and stealing attempts and connect with phone",
+        "timestamp": "2025-06-30T17:15:42.735685"
+    },
+    {
+        "idea": "yrhr",
+        "timestamp": "2025-06-30T18:09:26.412755"
+    },
+    {
+        "idea": "yrsh",
+        "timestamp": "2025-06-30T18:47:23.646982"
+    },
+    {
+        "idea": "a smart football ball that tracks shots pass through sensors data",
+        "timestamp": "2025-06-30T18:48:46.843064"
+    },
+    {
+        "idea": "a smart football ball that tracks shots pass through sensors data",
+        "timestamp": "2025-06-30T18:54:10.123602"
     }
 ]
