fix analytics result

--- a/ideas.json
+++ b/ideas.json
@@ -122,5 +122,21 @@
     {
         "idea": "a smart bottle of water ",
         "timestamp": "2025-07-03T11:43:28.154707"
+    },
+    {
+        "idea": "a smart bottle of water that gives alerts",
+        "timestamp": "2025-07-03T11:46:25.926213"
+    },
+    {
+        "idea": "a smart bottle of water",
+        "timestamp": "2025-07-03T11:47:03.839951"
+    },
+    {
+        "idea": "a smart toilet",
+        "timestamp": "2025-07-07T17:19:50.914832"
+    },
+    {
+        "idea": "a smart toilet that connects with phone",
+        "timestamp": "2025-07-07T17:21:07.475287"
     }
 ]
