change the webpage the result page and make some improvments in visual elemnts

--- a/ideas.json
+++ b/ideas.json
@@ -190,5 +190,13 @@
     {
         "idea": "a smart toilet that connects to the phone and sends data and make analytics and provide tips and other benefits or alerts",
         "timestamp": "2025-07-07T22:56:27.562435"
+    },
+    {
+        "idea": "a smart toilet that connects with phone and sends data and analytics and provide tips and alerts for the user",
+        "timestamp": "2025-07-08T09:37:05.728583"
+    },
+    {
+        "idea": "a smart copybook that connects with phone and send all what you write on it to your phone amd change the format for many universal formats with ai integration to help summarize what you write",
+        "timestamp": "2025-07-08T10:03:56.981697"
     }
 ]
