make the result page includes all the ai agents results

--- a/ideas.json
+++ b/ideas.json
@@ -198,5 +198,9 @@
     {
         "idea": "a smart copybook that connects with phone and send all what you write on it to your phone amd change the format for many universal formats with ai integration to help summarize what you write",
         "timestamp": "2025-07-08T10:03:56.981697"
+    },
+    {
+        "idea": "a smart notebook that connects with phone and sends all what user write in it to phone and transofrm it to universal format with ai integration to summarize what you have as notes",
+        "timestamp": "2025-07-08T11:04:36.175366"
     }
 ]
